# idelium-cli

./: AGENTS.md  LICENSE.txt  MANIFEST.in  NEWS.rst  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/bidi/: README.md  browser-support.md
docs/dsl/: README.md
docs/dsl/v1/: AST.md  SPECIFICATION.md  ast.schema.json  grammar.ebnf
docs/dsl/v1/examples/: complete.ast.json  login.idelium  minimal.idelium  navigation-and-screenshot.idelium
docs/plugin-api/: README.md
docs/reports/: README.md  execution-report.schema.json
docs/selector-diagnostics/: README.md
scripts/: build-package.sh  publish-package.sh  test-package.sh
src/idelium/: __init__.py
src/idelium/_internal/: astexport.py  bidi.py  executionreport.py  exitcodes.py  ideliumclib.py  ideliummanager.py  ideliumws.py  main.py  pluginapi.py  selector_diagnostics.py
src/idelium/_internal/commons/: connection.py
src/idelium/_internal/dsl/: __init__.py  parser.py  runtime.py
src/idelium/_internal/thirdparties/: ideliumpostman.py  ideliumzephyr.py
src/idelium/_internal/wrappers/: ideliumappium.py  ideliumselenium.py
tests/: test_appium.py  test_ast_export.py  test_bidi_negotiation.py  test_cli_arguments.py  test_cli_error_handling.py  test_dsl_parser.py  test_dsl_runtime.py  test_dsl_specification.py  test_execution_report.py  test_http_transport.py  test_ideliumws_configuration.py  test_metadata.py  test_plugin_api.py  test_plugin_dispatch.py  test_postman.py  test_postman_manager.py  test_postman_newman.py  test_selector_diagnostics.py  test_selenium_actions.py  test_selenium_command.py  test_selenium_grid.py  test_selenium_waits.py
